--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <title>Image Caption Generator</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 <h2>Image Caption Generator<h2>
 <h3>Upload new PNG/JPG/JPEG</h3>
 <form method=post enctype=multipart/form-data>
